[gd_scene load_steps=3 format=3 uid="uid://cc4jmddx2vhpt"]

[ext_resource type="SpriteFrames" uid="uid://s7vsdf7qm06g" path="res://src/ui/gauge/vertical_marker.aseprite" id="1_f1wmp"]
[ext_resource type="Script" uid="uid://cs13thnenmw81" path="res://src/ui/gauge/gauge_vertical.gd" id="1_nr54q"]

[node name="Gauge_Vertical" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nr54q")
decimals = 2
height = null

[node name="StartLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = -7.0
offset_right = 50.0
offset_bottom = 9.0
pivot_offset = Vector2(0, 7)
text = "0 ft"
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = -9.0
offset_top = 85.0
offset_right = 31.0
offset_bottom = 101.0
rotation = -1.5708
pivot_offset = Vector2(0, 7)
text = "depth"
vertical_alignment = 1

[node name="EndLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 10.0
offset_top = 133.0
offset_right = 50.0
offset_bottom = 149.0
pivot_offset = Vector2(0, 7)
text = "0 ft"
vertical_alignment = 1

[node name="Marker" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 80.0

[node name="ValueLabel" type="Label" parent="Marker"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 18.0
offset_top = -7.0
offset_right = 58.0
offset_bottom = 9.0
pivot_offset = Vector2(0, 7)
text = "234 ft"
vertical_alignment = 1

[node name="MainSprite" type="AnimatedSprite2D" parent="Marker"]
position = Vector2(7, 0)
sprite_frames = ExtResource("1_f1wmp")
animation = &"idle"
offset = Vector2(4, 0)

[node name="Line" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 2.0
offset_bottom = 140.0
color = Color(0.858824, 0.992157, 1, 1)
